create order + remove to cart

--- a/src/components/main.css
+++ b/src/components/main.css
@@ -4,8 +4,8 @@
 .main-section .row .col-7 :first-child {
     height: 100% !important;
 }
-.main-section .row .col-7 img {
-    height: 100% !important;
+.main-section .card_img {
+    width: 100% !important;
 }
 
 
