--- a/src/App.css
+++ b/src/App.css
@@ -115,12 +115,34 @@ hr {
 
 
 .image-list{
-  position: relative;
   height: 100%;
   width: auto;
-  right:100%;
   bottom: 0;
 }
 .image-banner{
   width: 100%;
+}
+
+
+.loading_page{
+  width: 100vw;
+  position: absolute;
+  top: 0;
+  background-color: rgba(255,255,255,0.7);
+  z-index: 999;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  animation-name: loading;
+  animation-duration: 0.5s;
+  animation-fill-mode: forwards;
+  overflow: hidden;
+}
+@keyframes loading {
+  from{
+    height: 0vh;
+  }
+  to {
+    height: 100vh;
+  }
 }
